Do not crash on NULL subsection

Gedit would crash if both "preferences-section" and
"tools-section" were extended.

https://bugzilla.gnome.org/show_bug.cgi?id=737781